# atopile-analyzer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
crates/atopile_analyzer/: Cargo.toml
crates/atopile_analyzer/src/: .lib.rs.pending-snap  .unused_interface.rs.pending-snap  diagnostics.rs  evaluator.rs  lib.rs  module.rs  unused_interface.rs
crates/atopile_analyzer/tests/: evaluator.rs
crates/atopile_analyzer/tests/snapshots/: evaluator__bma400.snap  evaluator__cyclic_inheritance.snap  evaluator__dependency_ordering.snap  evaluator__duplicate_declaration.snap  evaluator__forward_reference.snap  evaluator__hoisted_declaration.snap  evaluator__pin_connections.snap  evaluator__resistors.snap  evaluator__simple_component.snap  evaluator__simple_connection.snap  evaluator__simple_module.snap  evaluator__specialize.snap  evaluator__transistors.snap  evaluator__transitive_import.snap  evaluator__vdivs.snap
crates/atopile_lsp/: Cargo.toml  install.sh
crates/atopile_lsp/src/: main.rs
crates/atopile_lsp/vscode/: .gitignore  .vscodeignore  language-configuration.json  package-lock.json  package.json
crates/atopile_lsp/vscode/preview/: package-lock.json  package.json  pi0006-B_Cu.gbl  pi0006-F_Cu.gtl  pi0006-In1_Cu.g1  pi0006-In2_Cu.g2  pi0006-job.gbrjob  pi0006.csv  pi0006.pos  teensy-B_Adhesive.gba  teensy-B_Courtyard.gbr  teensy-B_Cu.gbl  teensy-B_Fab.gbr  teensy-B_Mask.gbs  teensy-B_Paste.gbp  teensy-B_Silkscreen.gbo  teensy-Edge_Cuts.gm1  teensy-F_Adhesive.gta  teensy-F_Courtyard.gbr  teensy-F_Cu.gtl  teensy-F_Fab.gbr  teensy-F_Mask.gts  teensy-F_Paste.gtp  teensy-F_Silkscreen.gto  teensy-In1_Cu.g1  teensy-In1_Cu.g2  teensy-In2_Cu.g2  teensy-In2_Cu.g3  teensy-User_7.gbr  teensy-User_Comments.gbr  (+5 more)
(+79 files in other folders)
