[package]
name = "atopile_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
assert_fs = "1.1.2"
atopile_parser = { path = "../atopile_parser" }
insta = { version = "1.41.1", features = ["filters", "yaml"] }
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive", "rc"] }
